Springblog posts functionality

--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -7,10 +7,10 @@
 <body>
 <div th:fragment="navbar">
     <nav>
-    <a th:href="">Explore</a>
-    <a th:href="">Posts</a>
-    <a th:href="">Profile</a>
-    <a th:href="">Home</a>
+    <a th:href="@{/posts}">Posts</a>
+    <a href="">About</a>
+    <a href="">Profile</a>
+    <a href="">Home</a>
     </nav>
 </div>
 
