--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -7,5 +7,11 @@
 <body>
 <div th:replace="/partials/partials.html :: navbar"></div>
 <h1>Welcome to my Website</h1>
+<div th:each ="post : ${posts}">
+
+    <h3 th:text="${post.title}"></h3>
+    <p th:text="${post.body}"></p>
+
+</div>
 </body>
 </html>
