--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -5,7 +5,13 @@
     <title></title>
 </head>
 <body>
+<div th:each ="post : ${posts}">
 
+    <h3 th:text="${post.title}"></h3>
+    <p th:text="${post.user.email}"></p>
+    <p th:text="${post.body}"></p>
+
+</div>
 
 </body>
 </html>
