form model binding added

--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -10,7 +10,7 @@
     <h3 th:text="${post.title}"></h3>
     <p th:text="${post.user.email}"></p>
     <p th:text="${post.body}"></p>
-
+<!--    edit button goes here-->
 </div>
 
 </body>
