--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -5,16 +5,7 @@
     <title></title>
 </head>
 <body>
-
-<!--<form th:action="@{/posts/create}" method="post">-->
-<!--    <label>Title</label>-->
-<!--    <input type="text" name="title">-->
-<!--    <label>Body</label>-->
-<!--    <input type="text" name="body">-->
-<!--    <button type="submit">POST</button>-->
-<!--</form>-->
-
-<form th:action="@{/posts/create}" th:method="post" th:object="${post}">
+<form th:action="@{/posts/{id}/edit (id = ${post.id})}" th:method="post" th:object="${post}">
     <label for="title">Title:</label>
     <input type="text" th:field="*{title}" id="title" />
     <br />
@@ -23,6 +14,5 @@
     <br />
     <input type="submit" />
 </form>
-
 </body>
 </html>
